Para corrigir o bug de alinhamento dos textos da tabela ao centro, usei um seletor td para representar os dados e apliquei a propriedade text-align: center, contudo a tabela em si se moveu um pouco para o lado direito, e então para que ela voltasse a sua posição de origem usei um position: relative; e um right: 55px.

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -32,7 +32,7 @@ img {
 div>p:first-child {
     display: block;
     padding-top: 150px;
-    width: 180px;
+        width: 180px;
     margin: 0 auto;
 }
 
@@ -105,6 +105,13 @@ div:last-child {
 
 table {
     width: 60%;
+
+    position: relative;
+    right: 55px;
+}
+
+td {
+    text-align: center;
 }
 
 td button {
@@ -113,6 +120,7 @@ td button {
     height: 30px;
     border-radius: 5px;
     color: black;
+
 }
 
 .container-do-search {
